Fix inventory overscroll by hiding overflow in rows.

--- a/src/app/ui/inventory-row.scss
+++ b/src/app/ui/inventory-row.scss
@@ -7,6 +7,7 @@ wf-inventory-row {
 	position: relative;
 	flex-shrink: 0;
 	flex-grow: 0;
+	overflow: hidden;
 
 	> span {
 		@include inset-border-inverted(1px);
